--- a/RayTracer/RayTracer.vcxproj.filters
+++ b/RayTracer/RayTracer.vcxproj.filters
@@ -190,5 +190,8 @@
     <ClInclude Include="OctreeNode.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="mytimer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
